# libhyscandriver

./: CMakeLists.txt  readme.md
doc/: Doxyfile  html_header  mainpage.doxy
docs/: hyscan-driver.xml
hyscandriver/: CMakeLists.txt  hyscan-actuator-info.c  hyscan-actuator-info.h  hyscan-actuator-schema.c  hyscan-actuator-schema.h  hyscan-actuator.c  hyscan-actuator.h  hyscan-device-driver.c  hyscan-device-driver.h  hyscan-device-schema.c  hyscan-device-schema.h  hyscan-device.c  hyscan-device.h  hyscan-discover.c  hyscan-discover.h  hyscan-driver-marshallers.list  hyscan-driver-schema.c  hyscan-driver-schema.h  hyscan-driver.c  hyscan-driver.h  hyscan-sensor-driver.c  hyscan-sensor-driver.h  hyscan-sensor-info.c  hyscan-sensor-info.h  hyscan-sensor-schema.c  hyscan-sensor-schema.h  hyscan-sensor.c  hyscan-sensor.h  hyscan-sonar-driver.c  hyscan-sonar-driver.h  hyscan-sonar-info.c  hyscan-sonar-info.h  hyscan-sonar-schema.c  hyscan-sonar-schema.h  hyscan-sonar.c  hyscan-sonar.h  hyscan-uart.c  hyscan-uart.h  hyscandriver.pc.in
tests/: CMakeLists.txt  device-schema-test.c  driver-test.c  dummy-driver.c  hyscan-dummy-discover.c  hyscan-dummy-discover.h  uart-test.c
